Add VertexBuffers class and update ConstantBuffer
- Introduced `VertexBuffers` base class and `DX11VertexBuffers` derived class for managing Direct3D vertex buffers.
- Added pure virtual function `UpdateBuffer()` to `ConstantBuffer` and updated its implementation in `Dx11ConstantBuffer`.
- Updated project files to include new `VertexBuffers` source and header files, replacing `BufferManager`.
- Adjusted project filters to reflect the new structure and file inclusions.

--- a/Proyect1/Proyect1.vcxproj
+++ b/Proyect1/Proyect1.vcxproj
@@ -132,11 +132,13 @@
     <ClCompile Include="InConstantBuffer.cpp" />
     <ClCompile Include="GraphicsAPI.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="VertexBuffers.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Downloads\Resource.h" />
     <ClInclude Include="InConstantBuffer.h" />
     <ClInclude Include="GraphicsAPI.h" />
+    <ClInclude Include="VertexBuffers.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\..\Downloads\Tutorial07.fxh" />
