Add index buffer support and refactor vertex buffer class
- Updated `Proyect1.vcxproj` and `Proyect1.vcxproj.filters` to include `InIndexBuffer.h`.
- Refactored `DX11VertexBuffers` in `VertexBuffers.h` to use a default constructor and added `CreateBuffer` method for vertex buffer initialization.
- Introduced new header file `InIndexBuffer.h` with `IndexBuffers` base class and `Dx11IndexBuffer` derived class for index buffer management.

--- a/Proyect1/Proyect1.vcxproj.filters
+++ b/Proyect1/Proyect1.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClInclude Include="VertexBuffers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="InIndexBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\..\Downloads\Tutorial07.fxh">
