--- a/Proyect1/Proyect1.vcxproj
+++ b/Proyect1/Proyect1.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="..\..\..\..\Downloads\Resource.h" />
     <ClInclude Include="InConstantBuffer.h" />
     <ClInclude Include="GraphicsAPI.h" />
+    <ClInclude Include="InIndexBuffer.h" />
     <ClInclude Include="VertexBuffers.h" />
   </ItemGroup>
   <ItemGroup>
