Add GapiRenderResources base class for resource management
Introduced the GapiRenderResources class to manage rendering resources with a virtual CleanUpResources() method. Updated GapiBuffer and several other classes to inherit from GapiRenderResources, ensuring proper resource cleanup. Added new classes for DirectX 11 buffers and shaders, and modified project files to include new headers and source files. Commented out an unused method in GraphicsAPI.h.

--- a/Proyect1/Proyect1.vcxproj
+++ b/Proyect1/Proyect1.vcxproj
@@ -129,6 +129,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GapiDx11VertexShader.h" />
     <ClCompile Include="InConstantBuffer.cpp" />
     <ClCompile Include="GraphicsAPI.cpp" />
     <ClCompile Include="Source.cpp" />
@@ -137,6 +138,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Downloads\Resource.h" />
     <ClInclude Include="Gapibuffer.h" />
+    <ClInclude Include="GapiRenderResources.h" />
     <ClInclude Include="InConstantBuffer.h" />
     <ClInclude Include="GraphicsAPI.h" />
     <ClInclude Include="InIndexBuffer.h" />
