Add Tutorial7Base project and refactor buffer management
- Updated the solution file to include a new project "Tutorial7Base" with configurations for x64 and x86.
- Refactored buffer management by removing `Gapibuffer.h` and introducing `BufferResource.h`.
- Modified `ConstantBuffer.h`, `IndexBuffer.h`, and `VertexBuffer.h` to inherit from the new base class.
- Changed `GraphicsAPI` constructor to accept `HWND` and updated device creation logic for DirectX 11.1 support.
- Expanded `Source.cpp` for DirectX initialization and rendering logic.
- Added shader file `Tutorial07.fxh` and updated project files to reflect new structure.

--- a/Proyect1/Proyect1.vcxproj.filters
+++ b/Proyect1/Proyect1.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Constantbuffer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Dx11GraphicsAPI.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Downloads\Resource.h">
@@ -59,10 +62,13 @@
     <ClInclude Include="IPixelShader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Gapibuffer.h">
+    <ClInclude Include="BufferResource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GapiRenderResources.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Dx11GraphicsAPI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
