--- a/Tutorial7Base/Tutorial7Base.vcxproj
+++ b/Tutorial7Base/Tutorial7Base.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{66798e54-ad36-4dcc-bac8-2f8bde4cc71b}</ProjectGuid>
-    <RootNamespace>Proyect1</RootNamespace>
+    <ProjectGuid>{5e4c3084-97a4-4843-a149-5f37247049e8}</ProjectGuid>
+    <RootNamespace>Tutorial7Base</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -121,36 +121,20 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>d3d11.lib;dxgi.lib;dxguid.lib;d3dcompiler.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Dx11GraphicsAPI.cpp" />
-    <ClCompile Include="GapiDx11VertexShader.h" />
-    <ClCompile Include="InConstantBuffer.cpp" />
-    <ClCompile Include="GraphicsAPI.cpp" />
-    <ClCompile Include="Constantbuffer.cpp" />
-    <ClCompile Include="InIndexBuffer.cpp" />
     <ClCompile Include="Source.cpp" />
-    <ClCompile Include="VertexBuffers.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\Downloads\Resource.h" />
-    <ClInclude Include="Dx11GraphicsAPI.h" />
-    <ClInclude Include="BufferResource.h" />
-    <ClInclude Include="GapiRenderResources.h" />
-    <ClInclude Include="ConstantBuffer.h" />
-    <ClInclude Include="GraphicsAPI.h" />
-    <ClInclude Include="IndexBuffer.h" />
-    <ClInclude Include="IPixelShader.h" />
-    <ClInclude Include="VertexBuffer.h" />
+    <ClInclude Include="Resource.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\..\..\Downloads\Tutorial07.fxh" />
+    <None Include="Tutorial07.fxh" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
