Refactor graphics resource management and structure
- Updated `BufferResource` to inherit from `RenderResource`.
- Introduced `ConstanBuffer` with new member variables and methods.
- Implemented `CleanUpResources` in `Dx11GraphicsAPI` for proper resource management.
- Modified `GraphicsAPI` to include a default constructor and new buffer creation method.
- Simplified error handling in the `GraphicsAPI` constructor.
- Changed `Dx11vertexBuffer` base class from `BufferResource` to `RenderResource`.
- Added new header files `Base.h` and `RenderResource.h` for common functionality.
- Updated project files to include new headers and reflect source changes.

--- a/Proyect1/Proyect1.vcxproj
+++ b/Proyect1/Proyect1.vcxproj
@@ -140,12 +140,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Downloads\Resource.h" />
+    <ClInclude Include="Base.h" />
     <ClInclude Include="Dx11GraphicsAPI.h" />
     <ClInclude Include="BufferResource.h" />
     <ClInclude Include="ConstantBuffer.h" />
     <ClInclude Include="GraphicsAPI.h" />
     <ClInclude Include="IndexBuffer.h" />
     <ClInclude Include="IPixelShader.h" />
+    <ClInclude Include="RenderResource.h" />
     <ClInclude Include="VertexBuffer.h" />
   </ItemGroup>
   <ItemGroup>
