Refactor graphics API and resource management
- Updated `Base.h` to include additional headers and redefine the `RELEASE` macro for improved resource management.
- Removed the `SetByteWidth` method from `BufferResource.h` to simplify the interface.
- Streamlined `ConstantBuffer.h` by removing unnecessary member variables and methods.
- Enhanced the destructor of `Dx11ConstantBuffer` to utilize the new `RELEASE` macro for cleanup.
- Refactored `Dx11GraphicsAPI` in `Dx11GraphicsAPI.h`, removing several member variables and adding new buffer creation methods.
- Improved the constructor and resource cleanup in `GraphicsAPI.cpp`.
- Changed `CreateConstanBuffer` to return a `std::weak_ptr` for better memory management.
- Refactored `InitDevice` in `Source.cpp` to use the new `GAPI` object for Direct3D management.
- Updated the `Render` function to leverage the `GAPI` object, enhancing encapsulation.
- Restructured the `VertexBuffer` class to inherit from `BufferResource` and introduced `Dx11VertexBuffer` for Direct3D operations.
- Updated project files to reflect changes in file names and organization for better build system recognition.

--- a/Proyect1/Proyect1.vcxproj
+++ b/Proyect1/Proyect1.vcxproj
@@ -129,19 +129,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Dx11GraphicsAPI.cpp" />
     <ClCompile Include="GapiDx11VertexShader.h" />
     <ClCompile Include="InConstantBuffer.cpp" />
     <ClCompile Include="GraphicsAPI.cpp" />
     <ClCompile Include="Constantbuffer.cpp" />
     <ClCompile Include="InIndexBuffer.cpp" />
     <ClCompile Include="Source.cpp" />
-    <ClCompile Include="VertexBuffers.cpp" />
+    <ClCompile Include="VertexBuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Downloads\Resource.h" />
     <ClInclude Include="Base.h" />
-    <ClInclude Include="Dx11GraphicsAPI.h" />
     <ClInclude Include="BufferResource.h" />
     <ClInclude Include="ConstantBuffer.h" />
     <ClInclude Include="GraphicsAPI.h" />
