--- a/Proyect1/Proyect1.vcxproj
+++ b/Proyect1/Proyect1.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="Constantbuffer.cpp" />
     <ClCompile Include="InIndexBuffer.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="swapChain.h" />
     <ClCompile Include="VertexBuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -146,6 +147,7 @@
     <ClInclude Include="IndexBuffer.h" />
     <ClInclude Include="IPixelShader.h" />
     <ClInclude Include="RenderResource.h" />
+    <ClInclude Include="Textures.h" />
     <ClInclude Include="VertexBuffer.h" />
   </ItemGroup>
   <ItemGroup>
