Refactor texture classes and add shader support
Moved `Dx11Texture2D` and related classes to `Dx11texture.h` for better organization. Added `CreateShaderResource` method in `Dx11GraphicsAPI` for creating shader resource textures. Updated `GraphicsAPI.h` with new texture creation methods. Introduced `Shader.h` for a base shader class and added `Dx11Shaders.h` for vertex and pixel shader management. Modified `texture.h` to include new texture types. Updated project files to reflect the new structure.

--- a/Proyect1/Proyect1.vcxproj
+++ b/Proyect1/Proyect1.vcxproj
@@ -139,7 +139,7 @@
     <ClCompile Include="..\..\..\..\..\..\Devlibs\imgui-master\imgui_draw.cpp" />
     <ClCompile Include="..\..\..\..\..\..\Devlibs\imgui-master\imgui_tables.cpp" />
     <ClCompile Include="..\..\..\..\..\..\Devlibs\imgui-master\imgui_widgets.cpp" />
-    <ClCompile Include="Dx112Dtexture.cpp" />
+    <ClCompile Include="Dx11texture.h" />
     <ClCompile Include="GapiDx11VertexShader.h" />
     <ClCompile Include="InConstantBuffer.cpp" />
     <ClCompile Include="GraphicsAPI.cpp" />
@@ -159,10 +159,12 @@
     <ClInclude Include="Base.h" />
     <ClInclude Include="BufferResource.h" />
     <ClInclude Include="ConstantBuffer.h" />
+    <ClInclude Include="Dx11Shaders.h" />
     <ClInclude Include="GraphicsAPI.h" />
     <ClInclude Include="IndexBuffer.h" />
     <ClInclude Include="IPixelShader.h" />
     <ClInclude Include="RenderResource.h" />
+    <ClInclude Include="Shader.h" />
     <ClInclude Include="texture.h" />
     <ClInclude Include="VertexBuffer.h" />
   </ItemGroup>
