Enhance DirectX 11 rendering pipeline and resource management
- Modified `Dx11VertexShader` and `Dx11PixelShader` classes to include constructors for DirectX shader objects and input layouts, with updated destructors for resource cleanup.
- Added `CreateVertexShader` method in `Dx11GraphicsAPI` for compiling shaders and creating input layouts.
- Updated `GraphicsAPI.h` to include the new `CreateVertexShader` method.
- Updated project files to include new source and header files for `Dx11Sampler`, `Dx11Topology`, `Dx11ViewPort`, and `pase`.
- Introduced `DepthStencil` class for depth stencil resources.
- Implemented `Dx11Sampler` for managing DirectX sampler states.
- Created `Dx11Topology` and `Dx11ViewPort` classes for managing topology and viewport settings.
- Introduced `pase` class for managing various rendering resources.
- Updated `RenderElement` and `RenderMaterial` classes for better resource binding.
- Defined `Sampler` and `ViewPort` as abstract base classes for future specialization.

--- a/Proyect1/Proyect1.vcxproj
+++ b/Proyect1/Proyect1.vcxproj
@@ -139,12 +139,18 @@
     <ClCompile Include="..\..\..\..\..\..\Devlibs\imgui-master\imgui_draw.cpp" />
     <ClCompile Include="..\..\..\..\..\..\Devlibs\imgui-master\imgui_tables.cpp" />
     <ClCompile Include="..\..\..\..\..\..\Devlibs\imgui-master\imgui_widgets.cpp" />
+    <ClCompile Include="Dx11SAmpler.cpp" />
     <ClCompile Include="Dx11texture.h" />
+    <ClCompile Include="Dx11Topology.cpp" />
+    <ClCompile Include="Dx11ViewPort.cpp" />
     <ClCompile Include="GapiDx11VertexShader.h" />
     <ClCompile Include="InConstantBuffer.cpp" />
     <ClCompile Include="GraphicsAPI.cpp" />
     <ClCompile Include="Constantbuffer.cpp" />
     <ClCompile Include="InIndexBuffer.cpp" />
+    <ClCompile Include="pase.cpp" />
+    <ClCompile Include="RenderElement.cpp" />
+    <ClCompile Include="RenderMaterial.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="swapChain.h" />
     <ClCompile Include="VertexBuffer.cpp" />
@@ -159,14 +165,24 @@
     <ClInclude Include="Base.h" />
     <ClInclude Include="BufferResource.h" />
     <ClInclude Include="ConstantBuffer.h" />
+    <ClInclude Include="DepthStencil.h" />
+    <ClInclude Include="Dx11Sampler.h" />
     <ClInclude Include="Dx11Shaders.h" />
+    <ClInclude Include="Dx11Topology.h" />
+    <ClInclude Include="Dx11ViewPort.h" />
     <ClInclude Include="GraphicsAPI.h" />
     <ClInclude Include="IndexBuffer.h" />
     <ClInclude Include="IPixelShader.h" />
+    <ClInclude Include="pase.h" />
+    <ClInclude Include="PrimitiveTopology.h" />
+    <ClInclude Include="RenderElement.h" />
+    <ClInclude Include="RenderMaterial.h" />
     <ClInclude Include="RenderResource.h" />
+    <ClInclude Include="Sampler.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="texture.h" />
     <ClInclude Include="VertexBuffer.h" />
+    <ClInclude Include="ViewPort.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\..\Downloads\Tutorial07.fxh" />
