Refactor DirectX11 resource classes and methods
- Updated `Dx11Sampler` to initialize `m_samplerState` and removed the default constructor.
- Changed `Dx11ViewPort` to a default constructor and simplified its member variables and cleanup method.
- Introduced `Dx11ShaderResourceTexture`, `Dx11DepthStencilTexture`, and `Dx11RenderTarget` classes with proper initialization and cleanup.
- Modified resource creation methods in `GraphicsAPI.cpp` to return specific texture types and updated `CreateSampler` to directly create sampler states.
- Adjusted `CreateViewPort` and `SetViewPort` methods to use the new class hierarchy.
- Cleaned up includes and updated return types in `GraphicsAPI.h`.
- Simplified constructors and destructors in `Sampler`, `Shader`, and `Texture` classes.
- Updated pixel shader handling in `Source.cpp` to utilize the new `Dx11PixelShader` class.

Refactor texture and shader classes for improved structure

- Updated constructors for `Dx11Sampler`, `Dx11ViewPort`, `Dx11ShaderResourceTexture`, `Dx11DepthStencilTexture`, and `Dx11RenderTarget` to default constructors.
- Removed member variables from `Dx11ViewPort` and made `CleanUpResources` a no-op.
- Changed return types in `GraphicsAPI.cpp` for texture creation methods to use specific classes.
- Updated `GraphicsAPI.h` to reflect new class declarations and return types.
- Modified `CreateViewPort` and `SetViewPort` methods to use `ViewPort` instead of `Dx11ViewPort`.
- Split `Shader` class into `PixelShader` and `VertexShader`, adding appropriate constructors and `CleanUpResources` methods.
- Adjusted `Source.cpp` to use `std::weak_ptr<PixelShader>`.
- Implemented `CleanUpResources` methods in `Dx11texture.cpp` and `Shader.cpp`.
- Updated project files to include new `.cpp` and `.h` files for compilation.

--- a/Proyect1/Proyect1.vcxproj.filters
+++ b/Proyect1/Proyect1.vcxproj.filters
@@ -87,6 +87,12 @@
     <ClCompile Include="RenderMaterial.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Shader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Dx11texture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Downloads\Resource.h">
