--- a/Proyect1/Proyect1.vcxproj
+++ b/Proyect1/Proyect1.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="..\..\..\..\..\..\Devlibs\imgui-master\imgui_tables.cpp" />
     <ClCompile Include="..\..\..\..\..\..\Devlibs\imgui-master\imgui_widgets.cpp" />
     <ClCompile Include="Dx11SAmpler.cpp" />
+    <ClCompile Include="Dx11texture.cpp" />
     <ClCompile Include="Dx11texture.h" />
     <ClCompile Include="Dx11Topology.cpp" />
     <ClCompile Include="Dx11ViewPort.cpp" />
@@ -151,6 +152,7 @@
     <ClCompile Include="pase.cpp" />
     <ClCompile Include="RenderElement.cpp" />
     <ClCompile Include="RenderMaterial.cpp" />
+    <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="swapChain.h" />
     <ClCompile Include="VertexBuffer.cpp" />
